--- a/index.css
+++ b/index.css
@@ -1,24 +1,3 @@
-*{
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-}
-body {
-    background-color: #ffffff;
-}
-
-/* the primary header used throughout all pages */
-.mainHeader{
-    display: flex;
-    border-bottom: 5px solid black;
-    height: 100px;
-    width: 100%;
-    font-size: 30px;
-    justify-content: space-evenly;
-    align-items: flex-end;
-    background-color: rgba(21, 71, 52, 1);
-}
-
 /* changes hyperlinks */
 a{
     color: black;
@@ -36,3 +15,67 @@ a{
     width: 85px;
     height: 85px;
 }
+
+/* creates a class to center everything */
+.center{
+    text-align: center;
+}
+
+/* creates the language boxes */
+.lang{
+    display: flex;
+    align-items: center;
+    font-size: 50px;
+}
+#langH{
+    background-color: green;
+    width: 608px;
+    height: 50px;
+    border-radius: 3px 0px 0px 3px;
+    border: 2px solid black;
+    border-right: 0;
+}
+#langH2{
+    background-color: #ffffff;
+    width: 192px;
+    height: 50px;
+    border-radius: 0px 3px 3px 0px;
+    border: 2px solid black;
+    border-left: 0;
+}
+#langC{
+    background-color: green;
+    width: 536px;
+    height: 50px;
+    border-radius: 3px 0px 0px 3px;
+    border: 2px solid black;
+    border-right: 0;
+}
+#langC2{
+    background-color: #ffffff;
+    width: 264px;
+    height: 50px;
+    border-radius: 0px 3px 3px 0px;
+    border: 2px solid black;
+    border-left: 0;
+}
+#langJ{
+    background-color: green;
+    width: 352px;
+    height: 50px;
+    border-radius: 3px 0px 0px 3px;
+    border: 2px solid black;
+    border-right: 0;
+}
+#langJ2{
+    background-color: #ffffff;
+    width: 448px;
+    height: 50px;
+    border-radius: 0px 3px 3px 0px;
+    border: 2px solid black;
+    border-left: 0;
+}
+.langText{
+    padding-left: 20px;
+}
+
