--- a/all.css
+++ b/all.css
@@ -3,20 +3,32 @@
     margin-right: 0px;
     margin-top: 0px;
     margin-bottom: 0px;
+    font-family: noto;
 }
 body {
     background-color: #ffffff;
 }
 h1{
     font-size: 90px;
-    font-family: drink;
+    font-family: noto;
 }
 h4{
-    font-size: 40px;
+    font-size: 30px;
 }
 hr{
     border: 2px solid black;
 }
+.thin{
+    border: 1px solid black;
+}
+a{
+    color: black;
+    text-decoration: none;
+}
+a:hover{
+    color: green;
+}
+
 
 /* the primary header and footer used throughout all pages */
 .mainHeader{
@@ -32,26 +44,46 @@ hr{
 .mainFooter{
     display: flex;
     border-top: 5px solid black;
-    height: 100px;
+    height: 50px;
     width: 100%;
     font-size: 30px;
     justify-content: space-evenly;
     align-items: flex-end;
     background-color: rgba(21, 71, 52, 1);
 }
+/* icon */
+.icon{
+    margin-top: 13px;
+    width: 85px;
+    height: 85px;
+}
+
 
 /* fonts */
 @font-face {
     font-family: drink;
     src: url("./Fonts/LTDrink-Medium.ttf");
 }
+@font-face {
+    font-family: noto;
+    src: url("./Fonts/Noto_Serif/NotoSerif-Regular.ttf");
+}
+@font-face {
+    font-family: notoBold;
+    src: url("./Fonts/Noto_Serif/NotoSerif-Bold.ttf");
+}
 
 /* page boxes*/
 .box{
-    border-radius: 7px 7px 7px 7px;  
-    border: 7px solid rgba(21, 71, 52, 1);
     margin-left: 50px;
     margin-right: 50px;
+    margin-top: 10px;
     padding: 10px 10px 10px 10px;
-    font-size: 30px;
+    font-size: 17px;
+}
+.flexBox{
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    padding-bottom: 15px;
 }
