--- a/all.css
+++ b/all.css
@@ -9,8 +9,8 @@ body {
     background-color: #ffffff;
 }
 h1{
-    font-size: 90px;
-    font-family: noto;
+    font-size: 70px;
+    font-family: notoBold;
 }
 h4{
     font-size: 30px;
@@ -28,6 +28,9 @@ a{
 a:hover{
     color: green;
 }
+input{
+    font-size: 30px;
+}
 
 
 /* the primary header and footer used throughout all pages */
@@ -36,7 +39,7 @@ a:hover{
     border-bottom: 5px solid black;
     height: 100px;
     width: 100%;
-    font-size: 50px;
+    font-size: 40px;
     justify-content: space-evenly;
     align-items: center;
     background-color: rgba(21, 71, 52, 1);
@@ -44,18 +47,21 @@ a:hover{
 .mainFooter{
     display: flex;
     border-top: 5px solid black;
-    height: 50px;
+    height: auto;
     width: 100%;
     font-size: 30px;
     justify-content: space-evenly;
-    align-items: flex-end;
+    align-items: center;
     background-color: rgba(21, 71, 52, 1);
+    padding-bottom: 10px;
 }
 /* icon */
 .icon{
+    position: relative;
     margin-top: 13px;
     width: 85px;
     height: 85px;
+    border-radius: 100%;
 }
 
 
@@ -75,8 +81,8 @@ a:hover{
 
 /* page boxes*/
 .box{
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: 100px;
+    margin-right: 100px;
     margin-top: 10px;
     padding: 10px 10px 10px 10px;
     font-size: 17px;
@@ -86,4 +92,56 @@ a:hover{
     justify-content: center;
     gap: 15px;
     padding-bottom: 15px;
+}
+
+/* info box */
+.infoTitle{
+    font-size: 15px;
+}
+.info{
+    font-size: 10px;
+}
+
+@media screen and (max-width: 800px){
+    .mainHeader{
+        display: flex;
+        border-bottom: 2px solid black;
+        height: 60px;
+        width: 100%;
+        font-size: 20px;
+        justify-content: space-evenly;
+        align-items: center;
+        background-color: rgba(21, 71, 52, 1);
+    }
+    .mainFooter{
+        display: flex;
+        border-top: 5px solid black;
+        height: auto;
+        width: 100%;
+        font-size: 20px;
+        justify-content: space-evenly;
+        align-items: center;
+        background-color: rgba(21, 71, 52, 1);
+        padding-bottom: 5px;
+    }
+    .icon{
+        position: relative;
+        margin-top: 5px;
+        width: 50px;
+        height: 50px;
+        border-radius: 100%;
+    }
+    h1{
+        font-size: 40px;
+    }
+    h4{
+        font-size: 20px;
+    }
+    .box{
+        margin-left: 25px;
+        margin-right: 25px;
+        margin-top: 10px;
+        padding: 5px 5px 5px 5px;
+        font-size: 15px; 
+    }
 }
