--- a/index.css
+++ b/index.css
@@ -3,11 +3,17 @@
     text-align: center;
 }
 
+/* creates the background */
+body{
+    background-image: url("./Images/background.png");
+    background-repeat: no-repeat;
+}
+
 /* creates the language boxes */
 .lang{
     display: flex;
     align-items: center;
-    font-size: 50px;
+    font-size: 40px;
 }
 #langH{
  position: relative;
@@ -83,4 +89,119 @@
 }
 .servicesText{
     padding: 10px;
+}
+
+/* resume */
+.resume{
+    border: 2px solid black;
+    border-radius: 20px 0px 20px 0px;
+    margin-left: 200px;
+    margin-right: 200px;
+    padding: 40px;
+}
+
+/* about */
+.about{
+    margin-top: 250px;
+}
+
+/* titles */
+.pageTitle{
+    margin-top: 150px;
+    text-align: center;
+    font-size: 75px;
+    color: rgb(255, 255, 255);
+}
+.pageSubTitle{
+    text-align: center;
+    font-size: 50px;
+    color: rgb(255, 255, 255);
+}
+
+@media screen and (max-width:800px) {
+    .lang{
+        display: flex;
+        align-items: center;
+        font-size: 20px;
+    }
+    #langH{
+     position: relative;
+     border: 3px solid black;
+     width: 200px;
+     height: 30px;
+     border-radius: 9px 9px 9px 9px;
+    }
+    #langH2{
+     position: relative;
+     width: 152px;
+     background-color: green;
+     height: 30px;
+     z-index: -1;
+    }
+    #langC{
+     position: relative;
+     border: 3px solid black;
+     width: 200px;
+     height: 30px;
+     border-radius: 9px 9px 9px 9px;
+    }
+    #langC2{
+     position: relative;
+     width: 134px;
+     background-color: green;
+     height: 30px;
+     z-index: -1;
+    }
+    #langJ{
+     position: relative;
+     border: 3px solid black;
+     width: 200px;
+     height: 30px;
+     border-radius: 9px 9px 9px 9px; 
+    }
+    #langJ2{
+     position: relative;
+     width: 88px;
+     background-color: green;
+     height: 30px;
+     z-index: -1;
+    }
+    .langText{
+        padding-left: 20px;
+    }
+    .resume{
+        border: 2px solid black;
+        border-radius: 10px 0px 10px 0px;
+        margin-left: 50px;
+        margin-right: 50px;
+        padding: 20px;
+    }
+    .services{
+        display: flex;
+        flex-direction: column;
+        border-radius: 9px 9px 9px 9px;
+        border: 2px solid black;
+        background-color: rgb(240, 240, 240);
+        width: 100px;
+        text-align: center;
+        height: 200px;
+        font-size: 8px;
+        margin: 0px;
+    }
+    .services:hover{
+        border: 2px solid orange;
+    }
+    .services:hover hr{
+        border: 1px solid orange;
+    }
+    .servicesIcon{
+        color: rgba(21, 71, 52, 1);
+        font-size: 20px;
+    }
+    .servicesTitle{
+        font-size: 25px;
+    }
+    .servicesText{
+        padding: 10px;
+    }
 }
