--- a/Projects/projects.css
+++ b/Projects/projects.css
@@ -1,11 +1,103 @@
-/* creates a box to hold the project boxes */
+/* creates the project boxes */
 .projects{
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    margin-top: 100px;
+    margin-bottom: 50px;
+}
+.projectBox{
+    display: flex;
+    position: relative;
+    width: 400px;
+    height: 400px;
+    border: 5px solid rgba(21, 71, 52, 1);
+    align-items: center;
+    justify-content: center;
+}
+.projectRow{
+    gap: 50px;
+    display: flex;
+    flex-direction: row;
 }
 
-/* creates a box that holds the projects */
-.projectBox{
-    border: 2px solid black;
-    width: 300px;
-    height: 300px;
+/* texts */
+.FBLA{
+    display: none;
+    text-align: center;
+    margin: 10px;
+}
+.RPS{
+    display: none;
+    text-align: center;
+    margin: 10px;
+}
+.TTT{
+    display: none;
+    text-align: center;
+    margin: 10px;
+}
+.eastMEC{
+    display: none;
+    text-align: center;
+    margin: 10px;
+}
+.calc{
+    display: none;
+    text-align: center;
+    margin: 10px;
+}
+.troop{
+    display: none;
+    text-align: center;
+    margin: 10px;
+}
+
+/* on hovers */
+.webFBLA:hover .FBLA{
+    display: block;
+}
+.webRPS:hover .RPS{
+    display: block;
+}
+.webTTT:hover .TTT{
+    display: block;
+}
+.webEastMEC:hover .eastMEC{
+    display: block;
+}
+.webCalc:hover .calc{
+    display: block;
+}
+.web747:hover .troop{
+    display: block;
+}
+
+/* changes the screen sizes */
+@media screen and (max-width:800px){
+    .projects{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        margin-top: 50px;
+        margin-bottom: 20px;
+    }
+    .projectBox{
+        display: flex;
+        position: relative;
+        width: 350px;
+        height: 350px;
+        border: 5px solid rgba(21, 71, 52, 1);
+        align-items: center;
+        justify-content: center;
+    }
+    .projectRow{
+        gap: 20px;
+        display: flex;
+        flex-direction: column;
+    }
 }
