--- a/all.css
+++ b/all.css
@@ -107,7 +107,8 @@ input{
         display: flex;
         border-bottom: 2px solid black;
         height: 60px;
-        width: 100%;
+        margin-left: 0;
+        margin-right: 0;
         font-size: 20px;
         justify-content: space-evenly;
         align-items: center;
