--- a/all.css
+++ b/all.css
@@ -55,6 +55,12 @@ input{
     background-color: rgba(21, 71, 52, 1);
     padding-bottom: 10px;
 }
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%
+}
+
 /* icon */
 .icon{
     position: relative;
